--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ chardet==3.0.4
 humanize==0.5.1
 idna==2.6
 python-dateutil==2.6.1
-requests>=2.20.0
+requests==2.25.1
 six==1.11.0
-urllib3==1.24.2
+urllib3==1.26.5
